--- a/src/app/datepicker/datepicker.component.html
+++ b/src/app/datepicker/datepicker.component.html
@@ -1,9 +1,10 @@
 <div class="container mt-5">
     <div class="list-group">
-      <a href="#" class="list-group-item list-group-item-action text-center active">{{ today | date:'shortDate' }}</a>
+      <a href="#" class="list-group-item list-group-item-action text-center active">{{ today | date:'MM/dd/y' }}</a>
       <a href="#" class="list-group-item list-group-item-action text-center">{{ today | date:'MMMM' }}</a>
     </div>
     <div class="table-responsive">
+        <!-- TODO: td content should be generate -->
         <table class="table">
           <tbody>
           <tr>
