--- a/src/app/datepicker/datepicker.component.css
+++ b/src/app/datepicker/datepicker.component.css
@@ -22,6 +22,11 @@
     background-color: #e5f1ff;
 }
 
+.date-selector {
+    margin-top: -26px;
+    margin-left: 15px;
+}
+
 .input-group-prepend {
     background-color: #007bff;
 }
@@ -33,7 +38,7 @@
 }
 
 button {
-    padding: .75rem .5rem;
+    padding: .75rem .4rem;
     border-width: 0;
     background-color: transparent;
 }
@@ -42,4 +47,3 @@ button:focus {
     background-color: #007bff;
     color: white;
 }
-
