- Better Naming for date-selector hidden property

--- a/src/app/datepicker/datepicker.component.html
+++ b/src/app/datepicker/datepicker.component.html
@@ -4,9 +4,9 @@
             <span class="input-group-text" type="date" id="mail-addon">@</span>
         </div>
         <input type="text" class="form-control" placeholder="the day you were born" aria-label="Birthday" aria-describedby="the-day-you-were-born"
-            [value]="birthday | date" (click)="hiddenSelector = false">
+            [value]="birthday | date" (click)="hiddenDateSelector = false">
     </div>
-    <div class="date-selector" [class.d-none]="hiddenSelector">
+    <div class="date-selector" [class.d-none]="hiddenDateSelector">
         <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action text-center active">{{ today | date:'MM/dd/y' }}</a>
           <a href="#" class="list-group-item list-group-item-action text-center">{{ today | date:'MMMM' }}</a>
@@ -17,7 +17,7 @@
                     <tr *ngFor="let week of month">
                         <!-- TODO: On expession for table-disable class should be 0 calculate -->
                         <td *ngFor="let day of week" [class.table-disable]="day.getMonth() != 0">
-                            <button [disabled]="day.getMonth() != 0" [value]="day" (click)="onClick(day)">
+                            <button [disabled]="day.getMonth() != 0" [value]="day" (click)="birthday = day; showOff()">
                               {{ day | date:'dd' }}</button>
                         </td>
                     </tr>
