- When an user hovers an month or year, it gets a aliceblue color.

--- a/src/app/datepicker/datepicker.component.css
+++ b/src/app/datepicker/datepicker.component.css
@@ -67,6 +67,10 @@
     min-width: 125px;
 }
 
+.month-picker .list-group-item:hover, .year-picker .list-group-item:hover {
+    background-color: aliceblue;
+}
+
 .month-picker {
     z-index: 2;
 }
